syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

message Cookbook {
  string creator = 1;
  string id = 2;
  uint64 node_version = 3;
  string name = 4; 
  string description = 5; 
  string developer = 6; 
  string version = 7; 
  string support_email = 8;
  bool enabled = 9;
}
