syntax = "proto3";
package pylons.pylons;

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "pylons/pylons/recipe.proto";

message ItemRef {
  string cookbook_id = 1;
  string item_id = 2;
}

message Trade {
  string creator = 1;
  uint64 id = 2;
  repeated CoinInput coin_inputs = 3 [(gogoproto.nullable) = false];
  repeated ItemInput item_inputs = 4 [(gogoproto.nullable) = false];
  repeated cosmos.base.v1beta1.Coin coin_outputs = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated ItemRef item_outputs = 6 [(gogoproto.nullable) = false];
  string extra_info = 7;
  string receiver = 8;
  repeated ItemRef traded_item_inputs = 9 [(gogoproto.nullable) = false];
}